created significant experiences section, added project cards, and updated upcoming section

--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
 			<div class="container-fluid">
 				<div class="col-xs-12 col-md-8 bottom-buffer"> <!-- shrink font-size at less than ~800 -->
 					<p>
-						I'm a Software Engineer studying at Duke University, with a passion for technology, design, and solving problems.
+						I'm a Software Engineer studying at Duke University, with a passion for software design, and solving problems.
 						I'm from outside Boston, and a big Celtics and Patriots fan. I've played the piano since I was in second grade, 
 						and ever since I can remember, I've enjoyed exploring the outdoors, whether I'm hiking in North Carolina, camping 
 						in New England, or backpacking with my buddies.
@@ -87,12 +87,50 @@
 				</div>
 				<div class="col-xs-12 col-md-12">
 					<p>
-						Here are some snapshots of my recent projects, tackling challenges ranging
-						from simulating several models of the world to creating a recording and notes
-						app targeted for musicians. These are just glimpses of the work I've done, so 
-						feel free to check out my GitHub for a more detailed description of these and more.
-					</p>
+						Here's a timeline of some of my significant experiences in software design & development, data science, and academia. 
+						After this timeline, you can find a snapshots of some of my projects, tackling challenges ranging
+						from modeling the world to creating a mobile app for musicians. 
+						These are only glimpses of my work, so feel free to check out my GitHub for a more detailed description of these and more.
+					</p> 														  <!-- Or just "for more." ???-->
 				</div>
+			</div>
+		</div>
+
+		<a name="experience"></a>
+		<!-- Add timeline scroller -->
+		<!-- have it be part of scroll, then fix at height, then let it go as part of scroll -->
+		<!-- All about padding for moving the scroller -->
+
+		<div style="padding-left: 1em"> 				<!-- temporary styling -->
+														<!-- Incorporate pics in these!!!!! -->
+			<h1 class="text-center">Significant Experiences</h1>
+			<div class="exp-bullet">
+				<h3>Core CS 230 Teaching Assistant</h3>
+				<h4>August 2019 - Present</h4>
+				<ul>
+					<li>asdfasdf</li>
+				</ul>
+			</div>
+			<div class="exp-bullet">
+				<h3>Perthera: Software Engineer Intern</h3>
+				<h4>May 2019 - August 2019</h4>
+				<ul>
+					<li>asdfasdf</li>
+				</ul>
+			</div>
+			<div class="exp-bullet">
+				<h3>Duke Music Tutors: Web Design & Development</h3>
+				<h4>June 2019-Present</h4>
+				<ul>
+					<li>asdfasdf</li>
+				</ul>
+			</div>
+			<div class="exp-bullet">
+				<h3>CS 308: Advanced Software Engineering</h3>
+				<h4>January 2019 - May 2019</h4>
+				<ul>
+					<li>asdfasdf</li>
+				</ul>
 			</div>
 		</div>
 			
@@ -100,9 +138,28 @@
 		<div class="text-center">
 			<h1>Projects</h1>
 		</div>
-			
 		<div class="container">
-			<div class="col-xs-10 col-xs-offset-1 col-md-offset-0 col-md-6 card-buffer">
+			<div class="card-buffer col-xs-10 col-xs-offset-1 col-md-offset-0 col-md-6">
+				<div class="card center-block">
+					<div class="text-center text-buffer">
+						<p class="title">Perthera Software Engineer Internship</p>
+					</div>
+					<div class="pic-wrapper center-block">
+						<img src="images/perthera.png" alt="Perthera Logo" class="center-block">
+					</div>
+				</div>
+			</div>
+			<div class="card-buffer col-xs-10 col-xs-offset-1 col-md-offset-0 col-md-6">
+				<div class="card center-block">
+					<div class="text-center text-buffer">
+						<p class="title">Game Engine & HUD</p>
+					</div>
+					<div class="pic-wrapper center-block">
+						<img src="images/vooga.png" alt="Game Engine & HUD Project" class="center-block">
+					</div>
+				</div>
+			</div>
+			<div class="card-buffer col-xs-10 col-xs-offset-1 col-md-offset-0 col-md-6">
 				<div class="card center-block">
 					<div class="text-center text-buffer">
 						<p class="title">Slogo Turtles</p>
@@ -114,7 +171,7 @@
 					</div>
 				</div>
 			</div>
-			<div class="col-xs-10 col-xs-offset-1 col-md-offset-0 col-md-6 card-buffer">
+			<div class="card-buffer col-xs-10 col-xs-offset-1 col-md-offset-0 col-md-6">
 				<div class="card center-block">
 					<div class="text-center text-buffer">
 						<p class="title">General Automata</p>
@@ -126,7 +183,7 @@
 					</div>
 				</div>
 			</div>
-			<div class="col-xs-10 col-xs-offset-1 col-md-offset-0 col-md-6 card-buffer">
+			<div class="card-buffer col-xs-10 col-xs-offset-1 col-md-offset-0 col-md-6">
 				<div class="card center-block">
 					<div class="text-center text-buffer">
 						<p class="title">Block Breacker</p>
@@ -136,7 +193,7 @@
 					</div>
 				</div>
 			</div>
-			<div class="col-xs-10 col-xs-offset-1 col-md-offset-0 col-md-6 card-buffer">
+			<div class="card-buffer col-xs-10 col-xs-offset-1 col-md-offset-0 col-md-6">
 				<div class="card center-block">
 					<div class="text-center text-buffer">
 						<p class="title">Smart Bills</p> 
@@ -146,7 +203,7 @@
 					</div>
 				</div>
 			</div>
-			<div class="col-xs-10 col-xs-offset-1 col-md-offset-0 col-md-6 card-buffer">
+			<div class="card-buffer col-xs-10 col-xs-offset-1 col-md-offset-0 col-md-6">
 				<div class="card center-block">
 					<div class="text-center text-buffer">
 						<p class="title">Melody Seeds</p>
@@ -156,7 +213,7 @@
 					</div>
 				</div>
 			</div>
-			<div class="col-xs-10 col-xs-offset-1 col-md-offset-0 col-md-6 card-buffer">
+			<div class="card-buffer col-xs-10 col-xs-offset-1 col-md-offset-1 col-md-10">    <!-- make md-10 with md-1 offset if alone -->
 				<div class="card center-block">	
 					<div class="text-center text-buffer">
 						<p class="title">This Website!</p>
@@ -167,16 +224,13 @@
 				</div>
 			</div>
 		</div>
+
 		<a name="upcoming"></a>
 		<div class="upcoming">
 			<h1>Upcoming</h1>
-			<h2>March - May</h2>
+			<h2>July</h2>
 			<ul>
-				<li>Creating a game engine with a team of 10-12 people in my Advanced Software Engineering class.</li>
-			</ul>
-			<h2>April</h2>
-			<ul>
-				<li>Participating in Duke DataFest.</li>
+				<li>Wells Fargo Campus Analytics Challenge - Data Science Competition focusing on NLP</li>
 			</ul>
 		</div>
 	</div>
