updated some css, added more content to experiences

--- a/index.html
+++ b/index.html
@@ -34,13 +34,13 @@
 		</div>
 		<div class="inline-grid">
 			<div class="button-wrapper">
-				<a href="#about" onclick="revealNav(); addNavShadow();" id="button1" class="nav-button">
-					<h3>About</h3>
+				<a href="#experiences" onclick="revealNav(); addNavShadow();" id="button1" class="nav-button">
+					<h3>Experiences</h3>
 				</a>
 			</div>
 			<div class="button-wrapper">
-				<a href="#projects" onclick="revealNav(); addNavShadow();" id="button2" class="nav-button">
-					<h3>Projects</h3>
+				<a href="#snapshots" onclick="revealNav(); addNavShadow();" id="button2" class="nav-button">
+					<h3>Snapshots</h3>
 				</a>
 			</div>
 			<div class="button-wrapper">
@@ -69,76 +69,90 @@
 
 	<div class="content">
 		<div>
-			<a name="about"></a>
 			<h1 class="text-center">About Me</h1>
 			<div class="container-fluid">
 				<div class="col-xs-12 col-md-8 bottom-buffer"> <!-- shrink font-size at less than ~800 -->
 					<p>
-						I'm a Software Engineer studying at Duke University, with a passion for software design, and solving problems.
-						I'm from outside Boston, and a big Celtics and Patriots fan. I've played the piano since I was in second grade, 
-						and ever since I can remember, I've enjoyed exploring the outdoors, whether I'm hiking in North Carolina, camping 
-						in New England, or backpacking with my buddies.
+						I'm a Dual Major in Computer Science and Statistical Science at Duke University, with an unwaning curiosity and a passion for solving problems that improve quality of life. I have substantial Full-Stack Development experience from my professional, personal, and academic endeavors.
+					</p>
+					<p>
+						On a more personal level, I'm from outside Boston, and love rooting for Duke Basketball, the Patriots, and the Celtics. I've been playing the piano since second grade, and enjoy spending time outdoors.
 					</p>
 				</div>
 				<div class="col-xs-12 col-md-4 bottom-buffer">
 					<div class="pic-wrapper center-block">
-						<img src="images/hiking.jpg" alt="Backpacking">
+						<img src="images/hiking.jpg" alt="Backpacking"> <!-- FIXME diff pic -->
 					</div>
 				</div>
 				<div class="col-xs-12 col-md-12">
+					<a name="experiences"></a> <!-- Move up here to show the title -->
 					<p>
-						Here's a timeline of some of my significant experiences in software design & development, data science, and academia. 
-						After this timeline, you can find a snapshots of some of my projects, tackling challenges ranging
-						from modeling the world to creating a mobile app for musicians. 
-						These are only glimpses of my work, so feel free to check out my GitHub for a more detailed description of these and more.
-					</p> 														  <!-- Or just "for more." ???-->
+						Here are some of my significant experiences in software design and development as well as academia. 
+						If you want to see some of my projects in action, you can find snapshots of them <a href="#snapshots">here</a>. Check them out on Github for more details!
+					</p>
 				</div>
 			</div>
 		</div>
-
-		<a name="experience"></a>
 		<!-- Add timeline scroller -->
 		<!-- have it be part of scroll, then fix at height, then let it go as part of scroll -->
 		<!-- All about padding for moving the scroller -->
 
-		<div style="padding-left: 1em"> 				<!-- temporary styling -->
+		<div style="padding-left: 1em" id="experiences"> 				<!-- temporary styling -->
 														<!-- Incorporate pics in these!!!!! -->
 			<h1 class="text-center">Significant Experiences</h1>
 			<div class="exp-bullet">
+				<h3>Perthera: Software Engineer Internship</h3>  <!-- FIXME make text bigger -->
+				<h4>Technologies: RESTful Web Services, AWS S3, Java, MySQL, Vaadin</h4>   <!-- FIXME make text bigger -->
+				<h5>May 2019 - August 2019</h5>   <!-- FIXME make text bigger -->
+				<ul>
+					<li>Worked with and created RESTful APIs, ORM's, MySQL tables, and frontend components across several projects.</li>
+					<li>Expedited patient cancer treatment process and eased burden on patient coordinators by creating an automated system for faxing order forms to consenting patients' doctors (pre-filled forms with patient data). Up to 60 order forms sent weekly. </li>
+					<li>Created a means to easily record and view all company interactions with doctors (full stack).</li>
+					<li>Reduced the code base by ~2000 lines of code and eliminated several bugs by refactoring/constructing a table filtering system across multiple portals.</li>
+				</ul>
+			</div>
+			<div class="exp-bullet">
+				<h3>Duke Music Tutors: Dynamic Website & Reimbursement System</h3>
+				<h4>Technologies: CakePHP, MySQL, HTML, CSS, JavaScript, AdobeXD</h4>
+				<h5>July 2019 - Present</h5>
+				<ul>
+					<li>Created a website with a secure financial system and social forum (blogs, images, events, etc.) for my club. </li>
+					<li>Implemented an MVC design with user authentication and standard security measures.</li>
+					<li>Designed a database with ~20 normalized tables.</li>
+					<!-- <li>Streamlined all facets of the previously time-consuming reimbursement process into an efficient UI.</li> -->
+				</ul>
+			</div>
+			<div class="exp-bullet">
 				<h3>Core CS 230 Teaching Assistant</h3>
-				<h4>August 2019 - Present</h4>
+				<h5>August 2019 - </h5>
 				<ul>
-					<li>asdfasdf</li>
-				</ul>
-			</div>
-			<div class="exp-bullet">
-				<h3>Perthera: Software Engineer Intern</h3>
-				<h4>May 2019 - August 2019</h4>
-				<ul>
-					<li>asdfasdf</li>
-				</ul>
-			</div>
-			<div class="exp-bullet">
-				<h3>Duke Music Tutors: Web Design & Development</h3>
-				<h4>June 2019-Present</h4>
-				<ul>
-					<li>asdfasdf</li>
+					<li>Plan weekly discussion sections, hold office hours, grade assignments</li>
+					<li>Topics including functional programming, recursion, map-reduce, uncomputability, (un)countable infinities, and others</li>
 				</ul>
 			</div>
 			<div class="exp-bullet">
 				<h3>CS 308: Advanced Software Engineering</h3>
-				<h4>January 2019 - May 2019</h4>
+				<h4>Technologies: XML, Java</h4>
+				<h5>January 2019 - May 2019</h5>
+				<ul>
+					<li>asdfasdf</li>
+				</ul>
+			</div>
+			<div class="exp-bullet">
+				<h3>SmartBills & MelodySeeds iOS apps</h3>
+				<h4>Technologies: Swift</h4>
+				<a name="snapshots"></a> <!-- Move up here to show the title -->
+				<h5>August 2018 - December 2018</h5>
 				<ul>
 					<li>asdfasdf</li>
 				</ul>
 			</div>
 		</div>
 			
-		<a name="projects"></a>
 		<div class="text-center">
-			<h1>Projects</h1>
+			<h1>Snapshots</h1>
 		</div>
-		<div class="container">
+		<div class="container" id="snapshots">
 			<div class="card-buffer col-xs-10 col-xs-offset-1 col-md-offset-0 col-md-6">
 				<div class="card center-block">
 					<div class="text-center text-buffer">
@@ -152,6 +166,17 @@
 			<div class="card-buffer col-xs-10 col-xs-offset-1 col-md-offset-0 col-md-6">
 				<div class="card center-block">
 					<div class="text-center text-buffer">
+						<p class="title">Duke Music Tutors Dynamic Website & Reimbursement System</p>
+					</div>
+					<div class="pic-wrapper center-block">
+						<img src="images/dmt-logo.jpg" alt="DMT Logo" class="center-block smaller">
+					</div>
+				</div>
+			</div>
+			<!-- 
+			<div class="card-buffer col-xs-10 col-xs-offset-1 col-md-offset-0 col-md-6">
+				<div class="card center-block">
+					<div class="text-center text-buffer">
 						<p class="title">Game Engine & HUD</p>
 					</div>
 					<div class="pic-wrapper center-block">
@@ -159,13 +184,14 @@
 					</div>
 				</div>
 			</div>
+			-->
 			<div class="card-buffer col-xs-10 col-xs-offset-1 col-md-offset-0 col-md-6">
 				<div class="card center-block">
 					<div class="text-center text-buffer">
 						<p class="title">Slogo Turtles</p>
 					</div>
 					<div class="pic-wrapper center-block">
-						<video class="mini-video" autoplay muted loop class="center-block"> <!-- fix hard coded height and width -->
+						<video class="mini-video center-block" autoplay muted loop> <!-- fix hard coded height and width -->
 							<source src="videos/slogo-recording.mov">
 						</video>
 					</div>
@@ -199,7 +225,7 @@
 						<p class="title">Smart Bills</p> 
 					</div>
 					<div class="pic-wrapper center-block">
-						<img src="images/Smart-Bills-Assortment-wood-extension.png" alt="Smart Bills Project class="center-block">
+						<img src="images/Smart-Bills-Assortment-wood-extension.png" alt="Smart Bills Project" class="center-block">
 					</div>
 				</div>
 			</div>
@@ -213,7 +239,7 @@
 					</div>
 				</div>
 			</div>
-			<div class="card-buffer col-xs-10 col-xs-offset-1 col-md-offset-1 col-md-10">    <!-- make md-10 with md-1 offset if alone -->
+			<div class="card-buffer col-xs-10 col-xs-offset-1 col-md-offset-0 col-md-6">    <!-- make md-10 with md-1 offset if alone -->
 				<div class="card center-block">	
 					<div class="text-center text-buffer">
 						<p class="title">This Website!</p>
@@ -228,7 +254,7 @@
 		<a name="upcoming"></a>
 		<div class="upcoming">
 			<h1>Upcoming</h1>
-			<h2>July</h2>
+			<h2>August</h2>
 			<ul>
 				<li>Wells Fargo Campus Analytics Challenge - Data Science Competition focusing on NLP</li>
 			</ul>
