anchors go to the correct place now

--- a/index.html
+++ b/index.html
@@ -73,10 +73,10 @@
 			<div class="container-fluid">
 				<div class="col-xs-12 col-md-8 bottom-buffer"> <!-- shrink font-size at less than ~800 -->
 					<p>
-						I'm a Dual Major in Computer Science and Statistical Science at Duke University, with an unwaning curiosity and a passion for solving problems that improve quality of life. I have substantial Full-Stack Development experience from my professional, personal, and academic endeavors.
+						I'm a Dual Major in Computer Science and Statistical Science at Duke University, with an unwaning curiosity and a passion for solving problems that improve people's quality of life. I have substantial Full-Stack Development and Design experience from my professional, personal, and academic endeavors.
 					</p>
 					<p>
-						On a more personal level, I'm from outside Boston, and love rooting for Duke Basketball, the Patriots, and the Celtics. I've been playing the piano since second grade, and enjoy spending time outdoors.
+						Besides technical stuff, I'm a huge Patriots and Celtics fan from growing up outside Boston. Some of my hobbies include playing the piano, shooting hoops, and spending time outdoors.
 					</p>
 				</div>
 				<div class="col-xs-12 col-md-4 bottom-buffer">
@@ -85,10 +85,11 @@
 					</div>
 				</div>
 				<div class="col-xs-12 col-md-12">
-					<a name="experiences-anchor"></a> <!-- moved this here to get heading in view -->
+					<a name="experiences-anchor"></a>
 					<p>
 						Here are some of my significant experiences in software design and development as well as academia. 
-						If you want to see some of my projects in action, you can find snapshots of them <a href="#snapshots-anchor">here</a>. Check them out on Github for more details!
+						If you want to see some of my projects in action, you can find snapshots of them <a href="#snapshots-anchor">here</a>. 
+						Check them out on <a href="https://www.github.com/huntergregory" target="_blank">Github</a> for more details!
 					</p>
 				</div>
 			</div>
@@ -99,19 +100,19 @@
 
 		<!-- Move up here to show the title -->
 		<div style="padding-left: 1em" id="experiences"> <!-- temporary styling -->
-			<h1 class="text-center">Significant Experiences</h1>
+			<h1 class="text-center">My Path 👣</h1>
 		</div>
 		
 		<a name="snapshots-anchor"></a>
-		<div class="text-center">
-			<h1>Snapshots</h1>
+		<div class="text-center snapshots-title">
+			<h1>Snapshots 📸</h1>
 		</div>
 		
 		<div class="container" id="snapshots"></div>
 
 		<a name="upcoming-anchor"></a>
 		<div class="upcoming">
-			<h1>Upcoming</h1>
+			<h1>Upcoming ⌚️</h1>
 			<h2>August</h2>
 			<ul>
 				<li>Wells Fargo Campus Analytics Challenge - Data Science Competition focusing on NLP</li>
