updated linked in url

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 			<a href="https://www.github.com/huntergregory" target="_blank" id="button4" class="img-button">
 				<img src="images/github-white.png" alt="Github">
 			</a>
-			<a href="https://www.linkedin.com/in/hunter-gregory-6934a916b/" target="_blank" id="button5" class="img-button">
+			<a href="https://www.linkedin.com/in/hunter-gregory/" target="_blank" id="button5" class="img-button">
 				<img src="images/linkedin-white.png" alt="Github">
 			</a>
 			<a href="mailto:hunter.gregory@duke.edu" id="button6" class="img-button">
