updated about me and Upcoming, removed experiences section for now. Removed comments too

--- a/index.html
+++ b/index.html
@@ -34,8 +34,8 @@
 		</div>
 		<div class="inline-grid">
 			<div class="button-wrapper">
-				<a href="#experiences-anchor" onclick="revealNav(); addNavShadow();" id="button1" class="nav-button">
-					<h3>Experiences</h3>
+				<a href="#about-me-anchor" onclick="revealNav();" id="button1" class="nav-button">
+					<h3>About Me</h3>
 				</a>
 			</div>
 			<div class="button-wrapper">
@@ -68,15 +68,16 @@
 	<div id="name-fill-placeholder" class="name-fill"></div>
 
 	<div class="content">
+		<a name='about-me-anchor'></a>
 		<div>
 			<h1 class="text-center">About Me</h1>
 			<div class="container-fluid">
 				<div class="col-xs-12 col-md-8 bottom-buffer"> <!-- shrink font-size at less than ~800 -->
 					<p>
-						I'm a Dual Major in Computer Science and Statistical Science at Duke University, with an unwaning curiosity and a passion for solving problems that improve people's quality of life. I have substantial Full-Stack Development and Design experience from my professional, personal, and academic endeavors.
+						I'm a Dual Major in CS and Stats at Duke University, with a keen curiosity and a passion for solving problems that improve people's quality of life. I have substantial Full-Stack Development and Design experience from my professional, personal, and academic endeavors.
 					</p>
 					<p>
-						Besides technical stuff, I'm a huge Patriots and Celtics fan from growing up outside Boston. Some of my hobbies include playing the piano, shooting hoops, and spending time outdoors.
+						Besides technical stuff, I'm a huge Boston sports fan, and some of my hobbies include playing classical/jazz piano, shooting hoops, and spending time outdoors.
 					</p>
 				</div>
 				<div class="col-xs-12 col-md-4 bottom-buffer">
@@ -85,22 +86,12 @@
 					</div>
 				</div>
 				<div class="col-xs-12 col-md-12">
-					<a name="experiences-anchor"></a>
 					<p>
-						Here are some of my significant experiences in software design and development as well as academia. 
-						If you want to see some of my projects in action, you can find snapshots of them <a href="#snapshots-anchor">here</a>. 
+						Here are some snapshots of my projects of my projects.
 						Check them out on <a href="https://www.github.com/huntergregory" target="_blank">Github</a> for more details!
 					</p>
 				</div>
 			</div>
-		</div>
-		<!-- Add timeline scroller -->
-		<!-- have it be part of scroll, then fix at height, then let it go as part of scroll -->
-		<!-- All about padding for moving the scroller -->
-
-		<!-- Move up here to show the title -->
-		<div style="padding-left: 1em" id="experiences"> <!-- temporary styling -->
-			<h1 class="text-center">My Path 👣</h1>
 		</div>
 		
 		<a name="snapshots-anchor"></a>
@@ -113,9 +104,9 @@
 		<a name="upcoming-anchor"></a>
 		<div class="upcoming">
 			<h1>Upcoming ⌚️</h1>
-			<h2>August</h2>
+			<h2>October</h2>
 			<ul>
-				<li>Wells Fargo Campus Analytics Challenge - Data Science Competition focusing on NLP</li>
+				<li>Kaggle Data Competition for Graduate Machine Learning course.</li>
 			</ul>
 		</div>
 	</div>
