updated 'About Me' and 'Upcoming' sections, changed photo of myself, and added class tags for the photo

--- a/index.html
+++ b/index.html
@@ -74,21 +74,30 @@
 			<div class="container-fluid">
 				<div class="col-xs-12 col-md-8 bottom-buffer"> <!-- shrink font-size at less than ~800 -->
 					<p>
-						I'm a Dual Major in CS and Stats at Duke University, with a keen curiosity and a passion for solving problems that improve people's quality of life. I have substantial Full-Stack Development and Design experience from my professional, personal, and academic endeavors.
+						I'm a rising senior at Duke studying Statistics and Computer Science, 
+						with a keen curiosity for learning how the world works 
+						and a passion about solving problems that improve people's quality of life. 
+						I have substantial experience in Research, Design, and Development related to 
+						the full Software Stack as well as Machine Learning for Natural Language.
 					</p>
 					<p>
-						Besides technical stuff, I'm a huge Boston sports fan, and some of my hobbies include playing classical/jazz piano, shooting hoops, and spending time outdoors.
+						This summer, I'm super excited to intern for Microsoft! 
+						I'll be on an Azure Networking team focused on bringing Container Networking to the cloud.
+					</p>
+					<p>
+						Besides technical stuff, I'm a huge Boston sports fan. Some of my hobbies include 
+						playing classical/jazz piano, basketball, and enjoying the outdoors.
 					</p>
 				</div>
 				<div class="col-xs-12 col-md-4 bottom-buffer">
-					<div class="pic-wrapper center-block">
-						<img src="images/hiking.jpg" alt="Backpacking"> <!-- FIXME diff pic -->
+					<div class="pic-wrapper center-block pro-pic">
+						<img class="pro-pic" src="images/duke/duke_boys_pointer.png" alt="Duke vs UNC win"> 
 					</div>
 				</div>
 				<div class="col-xs-12 col-md-12">
 					<p>
-						Here are some snapshots of my projects of my projects.
-						Check them out on <a href="https://www.github.com/huntergregory" target="_blank">Github</a> for more details!
+						Below are some snapshots of a few of my projects and experiences.
+						Check out my <a href="https://www.github.com/huntergregory" target="_blank">Github</a> for more details!
 					</p>
 				</div>
 			</div>
@@ -104,10 +113,13 @@
 		<a name="upcoming-anchor"></a>
 		<div class="upcoming">
 			<h1>Upcoming ⌚️</h1>
-			<h2>October</h2>
+			<p>
+				Nothing lined up right now, but always looking for something fun to build!
+			</p>
+			<!-- <h2>Summer 2020</h2>
 			<ul>
-				<li>Kaggle Data Competition for Graduate Machine Learning course.</li>
-			</ul>
+				<li>SWE Intern at Microsoft</li>
+			</ul> -->
 		</div>
 	</div>
 </body>
