condensed duke photo dramatically

--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
 				</div>
 				<div class="col-xs-12 col-md-4 bottom-buffer">
 					<div class="pic-wrapper center-block pro-pic">
-						<img class="pro-pic" src="images/duke/duke_boys_pointer.png" alt="Duke vs UNC win"> 
+						<img class="pro-pic" src="images/duke/duke_boys_pointer_lighter.jpg" alt="Duke vs UNC win"> 
 					</div>
 				</div>
 				<div class="col-xs-12 col-md-12">
