--- a/index.html
+++ b/index.html
@@ -54,9 +54,6 @@
 			<a href="https://www.linkedin.com/in/hunter-gregory/" target="_blank" id="button5" class="img-button">
 				<img src="images/linkedin-white.png" alt="Github">
 			</a>
-			<a href="mailto:hunter.gregory@duke.edu" id="button6" class="img-button">
-				<img src="images/email-white.png" alt="Github">
-			</a>
 		</div>
 	</nav>
 	<div class="name-fill">
@@ -73,32 +70,27 @@
 			<h1 class="text-center">About Me</h1>
 			<div class="container-fluid">
 				<div class="col-xs-12 col-md-8 bottom-buffer"> <!-- shrink font-size at less than ~800 -->
-					<p>
-						I'm a rising senior at Duke studying Statistics and Computer Science, 
-						with a keen curiosity for learning how the world works 
-						and a passion about solving problems that improve people's quality of life. 
-						I have substantial experience in Research, Design, and Development related to 
-						the full Software Stack as well as Machine Learning for Natural Language.
-					</p>
-					<p>
-						This summer, I'm super excited to intern for Microsoft! 
-						I'll be on an Azure Networking team focused on bringing Container Networking to the cloud.
-					</p>
-					<p>
-						Besides technical stuff, I'm a huge Boston sports fan. Some of my hobbies include 
-						playing classical/jazz piano, basketball, and enjoying the outdoors.
-					</p>
+					<h2>Fun Stuff</h2>
+					<ul>
+						<li>Boston guy 🍀</li>
+						<li>Love biking, hiking, and basketball </li>
+						<li>Piano player and President of Duke Music Tutors</li>
+						<li>Eagle Scout</li>
+					</ul>
 				</div>
 				<div class="col-xs-12 col-md-4 bottom-buffer">
 					<div class="pic-wrapper center-block pro-pic">
-						<img class="pro-pic" src="images/duke/duke_boys_pointer_lighter.jpg" alt="Duke vs UNC win"> 
+						<img class="pro-pic" src="images/duke-boys.jpg" alt="Duke vs UNC win"> 
 					</div>
 				</div>
 				<div class="col-xs-12 col-md-12">
-					<p>
-						Below are some snapshots of a few of my projects and experiences.
-						Check out my <a href="https://www.github.com/huntergregory" target="_blank">Github</a> for more details!
-					</p>
+					<h2>Technical Stuff</h2>
+					<ul>
+						<li>Duke 2021: Double Major in Statistics & Computer Science</li>
+						<li>Passionate about using software to improves people's lives</li>
+						<li>Data Scientist, Full Stack Software Engineer, Resarcher</li>
+						<li>Curious how stuff works</li>
+					</ul>
 				</div>
 			</div>
 		</div>
@@ -108,18 +100,26 @@
 			<h1>Snapshots 📸</h1>
 		</div>
 		
+		<div class="container-fluid">
+			<div class="col-xs-12 col-md-12">
+				<p>
+					Glimpses of my projects and experiences.
+					Check out my <a href="https://www.github.com/huntergregory" target="_blank">Github</a> for more info!
+				</p>
+			</div>
+		</div>
+
 		<div class="container" id="snapshots"></div>
 
 		<a name="upcoming-anchor"></a>
 		<div class="upcoming">
 			<h1>Upcoming ⌚️</h1>
-			<p>
-				Nothing lined up right now, but always looking for something fun to build!
-			</p>
-			<!-- <h2>Summer 2020</h2>
+			<h2>Case Studies with imperfect, real-world data</h2>
 			<ul>
-				<li>SWE Intern at Microsoft</li>
-			</ul> -->
+				<li>Survival Analysis of World Leaders</li>
+				<li>Predicting November Elections!</li>
+				<li>a couple more!</li>
+			</ul>
 		</div>
 	</div>
 </body>
