updated about me and upcoming

--- a/index.html
+++ b/index.html
@@ -70,27 +70,17 @@
 			<h1 class="text-center">About Me</h1>
 			<div class="container-fluid">
 				<div class="col-xs-12 col-md-8 bottom-buffer"> <!-- shrink font-size at less than ~800 -->
-					<h2>Fun Stuff</h2>
-					<ul>
-						<li>Boston guy 🍀</li>
-						<li>Love biking, hiking, and basketball </li>
-						<li>Piano player and President of Duke Music Tutors</li>
-						<li>Eagle Scout</li>
-					</ul>
+					<p>
+						I'm a rising senior at Duke double majoring in Statistics and Computer Science! I'm a driven learner with experience ranging from Software Engineering at Microsoft (and at a startup) to Academic Research in Machine Learning. 
+					</p>
+					<p>
+						My interests vary across Data Science and Software, but overall I'm interested in making the world a better place through technology.
+					</p>
 				</div>
 				<div class="col-xs-12 col-md-4 bottom-buffer">
 					<div class="pic-wrapper center-block pro-pic">
 						<img class="pro-pic" src="images/duke-boys.jpg" alt="Duke vs UNC win"> 
 					</div>
-				</div>
-				<div class="col-xs-12 col-md-12">
-					<h2>Technical Stuff</h2>
-					<ul>
-						<li>Duke 2021: Double Major in Statistics & Computer Science</li>
-						<li>Passionate about using software to improves people's lives</li>
-						<li>Data Scientist, Full Stack Software Engineer, Resarcher</li>
-						<li>Curious how stuff works</li>
-					</ul>
 				</div>
 			</div>
 		</div>
@@ -103,7 +93,7 @@
 		<div class="container-fluid">
 			<div class="col-xs-12 col-md-12">
 				<p>
-					Glimpses of my projects and experiences.
+					Here are some glimpses of my projects and experiences.
 					Check out my <a href="https://www.github.com/huntergregory" target="_blank">Github</a> for more info!
 				</p>
 			</div>
@@ -117,8 +107,9 @@
 			<h2>Case Studies with imperfect, real-world data</h2>
 			<ul>
 				<li>Survival Analysis of World Leaders</li>
+				<li>Affect Detection using Wearables</li>
 				<li>Predicting November Elections!</li>
-				<li>a couple more!</li>
+				<li>Analysis of US Bike Share Systems</li>
 			</ul>
 		</div>
 	</div>
